self-contained apply texas

--- a/test/examples/applytexas/index.html
+++ b/test/examples/applytexas/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" type="text/css" href="./main.css">
   <script type="text/javascript" src="https://raw.github.com/kriskowal/es5-shim/master/es5-shim.min.js"></script>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="../../js/hotdrink.js"></script>
-  <script type="text/javascript" src="./model.js"></script>
+  <script type="text/javascript" src="hotdrink.js"></script>
+  <script type="text/javascript" src="model.js"></script>
   <title>ApplyTexas | HotDrink Demo</title>
   <script type="text/javascript">
     var model = new Model;
