pin binder and working example

--- a/test/examples/hotel2.html
+++ b/test/examples/hotel2.html
@@ -2,11 +2,11 @@
 <html>
 <head>
   <title>HotDrink | A Demonstration</title>
-  <link rel="stylesheet" type="text/css" href="main.css"/>
+  <link rel="stylesheet" type="text/css" href="../main.css"/>
   <script type="text/javascript" src="https://raw.github.com/kriskowal/es5-shim/master/es5-shim.min.js"></script>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="../js/hotdrink.js"></script>
-  <script type="text/javascript" src="utility.js"></script>
+  <script type="text/javascript" src="../js/utility.js"></script>
   <script type="text/javascript">
     dateToMaybeString = function dateToMaybeString(date) {
       var str = dateToString(date);
